@@ -139,18 +139,29 @@ module.exports = function( spectools ) {
 
     // Raw buffer comparison solutions
     // ----
-    spectools._checkHMAC = function( a, b ) {
-        return a.equals( b );
+    spectools.checkHMAC = ( a, b ) => spectools.secureEqualBuffer( a, b );
+
+    //---
+
+    /**
+     * Secure compare to cover time-based side-channels for attacks
+     * @param {Buffer} a - first buffer
+     * @param {Buffer} b - second buffer
+     * @returns {boolean} true, if match
+     * @alias SpecTools.secureEqualBuffer
+     */
+    spectools.secureEqualBuffer = ( a, b ) => {
+        const len = Math.min( a.length, b.length );
+
+        // data view
+        a = a.slice( 0, len );
+        b = b.slice( 0, len );
+
+        // always compare length AFTER
+        return crypto.timingSafeEqual( a, b ) && ( ( a.length - b.length ) === 0 );
     };
 
-    spectools._checkHMAC_legacy = function( a, b ) {
-        // Perhaps, there are faster approaches
-        return a.toString( 'hex' ) === b.toString( 'hex' );
-    };
-
-    if ( Buffer.prototype.equals ) {
-        spectools.checkHMAC = spectools._checkHMAC;
-    } else {
-        spectools.checkHMAC = spectools._checkHMAC_legacy;
-    }
+    // TODO: check, if really gains anything compared to plain JS version
+    spectools.secureEqual = ( a, b ) => spectools.secureEqualBuffer(
+        Buffer.from( a ), Buffer.from( b ) );
 };
